--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^4.1.1
   cloud_firestore: ^6.0.2
+  flutter_riverpod: ^3.0.2
 
 dev_dependencies:
   flutter_test:
