--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
@@ -94,39 +95,53 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 
+
   fonts:
-    - family: JosefinSlab
+    - family: Inter_18pt
       fonts:
-        - asset: assets/fonts/JosefinSlab-Regular.ttf
-        - asset: assets/fonts/JosefinSlab-Bold.ttf
+        - asset: assets/fonts/Inter_18pt-Regular.ttf
+        - asset: assets/fonts/Inter_18pt-Bold.ttf
           weight: 700
-        - asset: assets/fonts/JosefinSlab-Light.ttf
+        - asset: assets/fonts/Inter_18pt-Light.ttf
           weight: 300
-        - asset: assets/fonts/JosefinSlab-Medium.ttf
+        - asset: assets/fonts/Inter_18pt-Medium.ttf
           weight: 500
-        - asset: assets/fonts/JosefinSlab-SemiBold.ttf
+        - asset: assets/fonts/Inter_18pt-SemiBold.ttf
           weight: 600
-        - asset: assets/fonts/JosefinSlab-Thin.ttf
+        - asset: assets/fonts/Inter_18pt-Thin.ttf
           weight: 100
-        - asset: assets/fonts/JosefinSlab-ExtraLight.ttf
+        - asset: assets/fonts/Inter_18pt-ExtraLight.ttf
           weight: 200
-        - asset: assets/fonts/JosefinSlab-Italic.ttf
+        - asset: assets/fonts/Inter_18pt-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Inter_18pt-Black.ttf
+          weight: 900
+        - asset: assets/fonts/Inter_18pt-Italic.ttf
           style: italic
-        - asset: assets/fonts/JosefinSlab-BoldItalic.ttf
+        - asset: assets/fonts/Inter_18pt-BoldItalic.ttf
           weight: 700
           style: italic
-        - asset: assets/fonts/JosefinSlab-LightItalic.ttf
+        - asset: assets/fonts/Inter_18pt-LightItalic.ttf
           weight: 300
           style: italic
-        - asset: assets/fonts/JosefinSlab-MediumItalic.ttf
+        - asset: assets/fonts/Inter_18pt-MediumItalic.ttf
           weight: 500
           style: italic
-        - asset: assets/fonts/JosefinSlab-SemiBoldItalic.ttf
+        - asset: assets/fonts/Inter_18pt-SemiBoldItalic.ttf
           weight: 600
           style: italic
-        - asset: assets/fonts/JosefinSlab-ThinItalic.ttf
+        - asset: assets/fonts/Inter_18pt-ThinItalic.ttf
           weight: 100
           style: italic
-        - asset: assets/fonts/JosefinSlab-ExtraLightItalic.ttf
+        - asset: assets/fonts/Inter_18pt-ExtraLightItalic.ttf
           weight: 200
           style: italic
+        - asset: assets/fonts/Inter_18pt-ExtraBoldItalic.ttf
+          weight: 800
+          style: italic
+        - asset: assets/fonts/Inter_18pt-BlackItalic.ttf
+          weight: 900
+          style: italic
+    - family: Jomhuria
+      fonts:
+        - asset: assets/fonts/Jomhuria-Regular.ttf
