--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,9 @@
     "dockerfile": "Dockerfile"
   },
   "forwardPorts": [3000],
+  "otherPortsAttributes": {
+    "onAutoForward": "ignore"
+  },
   "name": "Flutter",
   "customizations": {
     "vscode": {
