--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,11 @@
       "extensions": [
         "Dart-Code.dart-code",
         "Dart-Code.flutter"
-      ]
+      ],
+      "settings": {
+        "remote.autoForwardPorts": false,
+        "remote.restoreForwardedPorts": false,
+      }
     }
   }
 }
