Tried to add riverpod.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,7 @@
   "build": {
     "dockerfile": "Dockerfile"
   },
+  "forwardPorts": [3000],
   "otherPortsAttributes": {
     "onAutoForward": "ignore"
   },
