--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,12 @@ dependencies:
   google_sign_in: ^7.0.0
   cloud_firestore: ^6.0.2
   flutter_riverpod: ^3.0.3
+  riverpod_annotation: ^3.0.3
   get: ^4.7.2
 
 dev_dependencies:
+  riverpod_generator: ^3.0.0
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
 
@@ -52,6 +55,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  custom_lint: ^0.8.0
+  riverpod_lint: ^3.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
