--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,7 +103,7 @@ flutter:
 
 
   fonts:
-    - family: Inter_18pt
+    - family: Inter
       fonts:
         - asset: assets/fonts/Inter_18pt-Regular.ttf
         - asset: assets/fonts/Inter_18pt-Bold.ttf
