Integrated schools API into code.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_riverpod: ^3.0.3
   riverpod_annotation: ^3.0.3
   get: ^4.7.2
+  flutter_typeahead: ^5.2.0
 
 dev_dependencies:
   riverpod_generator: ^3.0.0
