--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   riverpod_annotation: ^3.0.3
   get: ^4.7.2
   flutter_typeahead: ^5.2.0
+  fancy_password_field: ^2.0.8
 
 dev_dependencies:
   riverpod_generator: ^3.0.0
