--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get: ^4.7.2
   flutter_typeahead: ^5.2.0
   fancy_password_field: ^2.0.8
+  choice: ^2.3.2
 
 dev_dependencies:
   riverpod_generator: ^3.0.0
