--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_typeahead: ^5.2.0
   fancy_password_field: ^2.0.8
   choice: ^2.3.2
+  dio: ^5.9.0
 
 dev_dependencies:
   riverpod_generator: ^3.0.0
