--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   fancy_password_field: ^2.0.8
   choice: ^2.3.2
   dio: ^5.9.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   riverpod_generator: ^3.0.0
